force-app/main/default/objects/OrgLimitType__c/OrgLimitType__c.object-meta.xml
<CustomObject>
    <label>Org Limit Type</label>
    <nameField>
        <displayFormat>OLT-{0000}</displayFormat>
        <label>OrgLimitType Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Limit Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>