force-app/main/default/objects/OrgLimitType__c/fields/AlertThreshold__c.field-meta.xml
<CustomField>
    <fullName>AlertThreshold__c</fullName>
    <description>Threshold for triggering email per Org Limit Type</description>
    <label>Alert Threshold</label>
    <precision>13</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>