force-app/main/default/objects/OrgLimitType__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the org type is required to be monitored or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>