force-app/main/default/objects/OrgLimitType__c/fields/LastRetrievalDate__c.field-meta.xml
<CustomField>
    <fullName>LastRetrievalDate__c</fullName>
    <label>Last Retrieval Date</label>
    <type>DateTime</type>
</CustomField>