force-app/main/default/objects/OrgLimitType__c/fields/OrgLimitName__c.field-meta.xml
<CustomField>
    <fullName>OrgLimitName__c</fullName>
    <description>Api Name of the Org Limit key</description>
    <label>Org Limit Name</label>
    <length>126</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>