force-app/main/default/objects/OrgLimitType__c/fields/RetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>RetentionPeriod__c</fullName>
    <description>Number of days a org limit snapshot should be stored for.</description>
    <label>Retention Period (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>