force-app/main/default/objects/OrgLimitType__c/fields/RetrievalFrequency__c.field-meta.xml
<CustomField>
    <fullName>RetrievalFrequency__c</fullName>
    <description>Number of hours, for which the org limits would be retrieved and stored in snapshot</description>
    <label>Retrieval Frequency (Hours)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>