force-app/main/default/objects/OrgLimitType__c/fields/Stop_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Stop_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To send email alerts when Limit usage percentage is greater than threshold percentage</description>
    <label>Stop Alerts</label>
    <type>Checkbox</type>
</CustomField>