force-app/main/default/objects/OrgLimitType__c/validationRules/ACTIVE_ORGTYPE_RETENTION_RETRIVAL_NEEDED.validationRule-meta.xml
<ValidationRule>
    <fullName>ACTIVE_ORGTYPE_RETENTION_RETRIVAL_NEEDED</fullName>
    <active>true</active>
    <description>An active org limit type should have valid Retention Period, Retrieval Frequency and Threshold Limit.</description>
    <errorConditionFormula>AND(IsActive__c, 
OR( 
ISNULL( RetentionPeriod__c ), 
ISNULL( RetrievalFrequency__c ),
ISNULL(  AlertThreshold__c  )
)
)</errorConditionFormula>
    <errorMessage>Active records should have valid Retention Period, Retrieval Frequency and Alert Threshold</errorMessage>
</ValidationRule>