force-app/main/default/objects/OrgLimitType__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <columns>OrgLimitName__c</columns>
    <columns>AlertThreshold__c</columns>
    <columns>RetentionPeriod__c</columns>
    <columns>RetrievalFrequency__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Mine</filterScope>
    <label>Org Limit List</label>
</ListView>